fixtures/rust/test_double/should_fail/runtime_fake.rs
pub struct FakeUserRepository;

impl FakeUserRepository {
    pub fn get(&self, user_id: &str) -> &str {
        user_id
    }
}
